chore: swagger definitions
